k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-container
        image: mobouluad/hello:lts
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /usr/share/nginx/html/app
      volumes:
      - name: config
        configMap:
          name: my-configmap
          items:
          - key: config.txt
            path: conf.txt
