k8s/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /my-app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              name: http
